2011-03-17  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.6.1.24 Released.

	(Asterisk 1.6.1.23 was released a day earlier, but a bug existed in
	the patch for AST-2011-003 so this is a reissue of that release.)

	* AST-2011-003: Resource exhaustion in Asterisk Manager Interface

	* AST-2011-004: Remote crash vulnerability in TCP/TLS server

2011-02-21  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.6.1.22 Released.

	* AST-2011-002: Multiple array overflow and crash vulnerabilities in
	  UDPTL code

2011-01-17  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.6.1.21 Released.

	* AST-2011-001: Stack buffer overflow in SIP channel driver

2010-05-17  Leif Madsen <lmadsen@digium.com>

	* Asterisk 1.6.1.20 Released

        * This is the last bug maintenance release for the 1.6.1 branch. For
          continued support please move to the 1.6.2 branch. This branch will
          continue to receive security related issues for one additional year.

2010-05-13  Leif Madsen <lmadsen@digium.com>
        
	* Asterisk 1.6.1.20-rc2 Released

        * This will be the last maintenance release in this branch. Please
          move to the latest 1.6.2.x release for continued issue support.
          See http://www.asterisk.org/asterisk-versions for more information.

2010-05-12 20:02 +0000 [r262802]  Paul Belanger <paul.belanger@polybeacon.com>

	* main/loader.c, main/cli.c, /: Merged revisions 262800 via
	  svnmerge from https://origsvn.digium.com/svn/asterisk/trunk
	  ........ r262800 | pabelanger | 2010-05-12 15:59:16 -0400 (Wed,
	  12 May 2010) | 8 lines Notify CLI when modules is loaded /
	  unloaded (closes issue #17308) Reported by: pabelanger Patches:
	  cli.modules.patch uploaded by pabelanger (license 224) Tested by:
	  pabelanger, russell ........

2010-05-12 18:07 +0000 [r262747]  David Vossel <dvossel@digium.com>

	* /, apps/app_meetme.c: Merged revisions 262744 via svnmerge from
	  https://origsvn.digium.com/svn/asterisk/trunk ................